<resources>
    <string name="setup_done">All set! You can now place the widget on your home screen!</string>
    <string name="setup_need_auth">To access your Netatmo weather station and modules, the app needs authorization to read those data from your Netatmo account. Press the button below to open the Netatmo website and grant authorization.</string>
    <string name="button_auth">Authorize application</string>
    <string name="auth_error">Error on requesting authorization: %s</string>
    <string name="data_error">Error on retrieving data: %s</string>
    <string name="module">Module:</string>
    <string name="auth_invalid_state">Invalid state in authResponse!</string>
    <string name="auth_invalid_response">No valid authentication response received</string>
    <string name="background_color">Background color:</string>
    <string name="text_color">Text color:</string>
    <string name="only_wifi">Only update while connected to WiFi</string>
    <string name="global_settings">Global settings</string>
    <string name="text_size">Text size:</string>
    <string name="edit_widget">Edit existing widget:</string>
    <string name="show_icons">Show icons</string>
    <string name="no_module_selected">No module selected!</string>
    <string name="show_temperature">Show temperature</string>
    <string name="show_co2">Show CO2</string>
    <string name="show_humidity">Show humidity</string>
    <string name="show_name">Show module name &amp; update time</string>
    <string name="channel_name_errors">Errors</string>
    <string name="not_authorized">No authorization</string>
    <string name="not_authorized_long">Not authorized to access Netatmo Weather data</string>
    <string name="widget_type_last">Last measurement</string>
    <string name="widget_type_graph">Measurements graph</string>
    <string name="measurements">Measurements:</string>
    <string name="time_between_measurements">Time between measurements:</string>
    <string name="no_stations">Could not find any Netatmo Weather stations associated with your account</string>
    <string name="show_values">Show values:</string>
    <string name="error_retrieving_stations">"Error retrieving weather stations: %s"</string>
    <string name="refresh_time">Refresh time:</string>
    <string name="minutes">minutes</string>
    <string-array name="graphwidget_value_types">
        <item>no values</item>
        <item>latest</item>
        <item>first &amp; latest</item>
        <item>min &amp; max</item>
        <item>latest &amp; min, max</item>
        <item>first, latest &amp; min, max</item>
    </string-array>
</resources>