<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <include layout="@layout/module_config" />

        <CheckBox
            android:id="@+id/show_temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_temperature" />

        <CheckBox
            android:id="@+id/show_co2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_co2" />

        <CheckBox
            android:id="@+id/show_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_humidity" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_color" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/background_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_color" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/text_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size" />

                <EditText
                    android:id="@+id/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>
        </TableLayout>

        <CheckBox
            android:id="@+id/show_icons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_icons" />

        <CheckBox
            android:id="@+id/show_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_name" />

        <include layout="@layout/global_config" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:onClick="save"
            android:text="@android:string/ok" />
    </LinearLayout>
</ScrollView>