<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/module" />

        <Spinner
            android:id="@+id/modules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp" />

        <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TableRow android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/show_temperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_temperature" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/temperature_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/show_co2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_co2" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/co2_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <CheckBox
                    android:id="@+id/show_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_humidity" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/humidity_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/background_color" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/background_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_color" />

                <de.j4velin.lib.colorpicker.ColorPreviewButton
                    android:id="@+id/text_color"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_margin="5dp" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_size" />

                <EditText
                    android:id="@+id/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/measurements" />

                <EditText
                    android:id="@+id/limit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number" />
            </TableRow>

            <TableRow android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_between_measurements" />

                <Spinner
                    android:id="@+id/scale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </TableRow>
        </TableLayout>

        <CheckBox
            android:id="@+id/show_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/show_module_name" />

        <CheckBox
            android:id="@+id/show_latest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_latest_values" />

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/global_settings" />

        <CheckBox
            android:id="@+id/onlywifi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/only_wifi" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:onClick="save"
            android:text="@android:string/ok" />
    </LinearLayout>
</ScrollView>